htdocs/t/shop/shop.css
body {
	background: url(bg-wall.jpg) top center #140903;
	color: #fff;
}
#common-main-wrapper {
	font-size: 16px;
}
#common-main-wrapper a {
	color: #ff0893;
}
#promo {
	padding-top: 281px;
	position: relative;
}
#figure {
	height: 398px;
}
#image
{
	display: none;
	height: 100%;
	background: url(/t/shop/cocktail-shop.jpg) center center;
	font-size: 82px; text-align: center; line-height: 390px;
	color: transparent;
}
html.msie-8 #image { font-size: 0; }
#promo[data-state="image"] #image { display: block; }
#map {
	display: none;
	position: relative;
	height: 100%;
	background-color: #ccc;
}
#promo[data-state="map"] #map { display: block; }
#map .surface { width: 100%; height: 100%; }
#map .close {
	position: absolute;
	overflow: hidden;
	right: 10px;
	top: 10px;
	background: url(icon-map-close.png) no-repeat;
	width: 20px;
	height: 20px;
	display: block;
	cursor: pointer;
	text-indent: 999px;
}


#map .point { position: absolute; }
#map .point.selected { z-index: 4; }
#map .point:hover { z-index: 5; }
#map .point.selected .icon { width: 30px; height: 30px; cursor: default; }
#map .point .icon { position: absolute; left: -19px; top: -60px; width: 69px; height: 60px; cursor: pointer; }
#map .point .title { display: none; position: absolute; z-index: 10; left: -94px; top: 19px; min-width: 170px; padding: 10px; font-size: 13px; line-height: 17px; background: #000; background: rgba(0,0,0,0.85); -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; white-space: nowrap; }
#map .point:hover .title { display: block; }
#map .point .point-name { display: block; font-size: 15px; margin: 0 0 0.5em; }
#map .point.selected .point-name {  }
html.msie-8 #map .point .title { filter: alpha(opacity=85); }
/* skin part */
#map .point .icon { background-image: url(/t/shop/icon-map-point.png); }
#map .point .title { color: #fff; }
#map .point .point-name { color: #ff4ea5; }
#map .point.selected .point-name { color: #ff2929; }


.position-control { display: none; }
#map .position-control { display: block; position: absolute; z-index: 10; left: 20px; top: 20px; width: 61px; height: 106px; background-position: 0 0; }
#map .position-control .to-top,
#map .position-control .to-right,
#map .position-control .to-bottom,
#map .position-control .to-left,
#map .position-control .to-plus,
#map .position-control .to-minus { position: absolute; width: 15px; height: 15px; cursor: pointer; }
#map .position-control .to-top { left: 23px; top: 8px; }
#map .position-control .to-right { left: 32px; top: 26px; }
#map .position-control .to-bottom { left: 23px; top: 44px; }
#map .position-control .to-left { left: 14px; top: 26px; }
#map .position-control .to-plus { left: 23px; top: 62px; }
#map .position-control .to-minus { left: 23px; top: 80px; }
/* skin part */
#map .position-control { background-image: url(/t/skin/tasteit/bars-common.png); }


#promo .info {
	min-height: 81px;
	background-color: #000;
	border-top: 1px solid #313131;
	padding-left: 35px;
	white-space: nowrap;
	border-radius: 0 0 4px 4px;
}
#promo .info > div {
	display: inline-block;
	vertical-align: middle;
	padding-left: 40px;
	margin-top: 12px;
	position: relative;
	white-space: normal;
	*zoom:1;
	*display: inline;
}
#promo .info p {
	line-height: 1.3;
}
#promo .info .icon {
	position: absolute;
	left: 0;
	top: 50%;
	margin-top: -15px;
	background: url(icons-info.png) no-repeat;
	overflow: hidden;
	display: inline-block;
	width: 31px;
	height: 31px;
}

#promo .info .location {
	width: 235px;
	margin-right: 45px;
}
#promo .info .location .icon {
	background-position: 0 0;
}
#promo .info .location a {
	text-decoration: none;
	border-bottom: 1px dashed #ff0893;	
}
#promo[data-state="map"] .info .location a {
	color: inherit;
	text-decoration: none;
	border-bottom: none;
	cursor: text;
}
#promo .info .location a:hover {
	border-bottom-style: solid;
}
#promo[data-state="map"] .info .location a:hover {
	border-bottom-style: none;
}
#promo .info .location p {
	padding-top: 3px;
}

#promo .info .phone {
	min-width: 131px;
	margin-right: 60px;
}
#promo .info .phone .icon {
	background-position: -31px 0;
}
#promo .info .time {
	min-width: 142px;
	margin-right: 48px;
}
#promo .info .time .icon {
	background-position: -62px 0;
}
#promo .info .parking {
	width: 80px;
}
#promo .info .parking .icon {
	background-position: -93px 0;
}

.we-have-more {
	margin-top: 42px;
	white-space: nowrap;
	text-align: center;
}	
.we-have-more .title {
	width: 585px;
	height: 55px;
	margin: 0 auto 18px;
	color: transparent;
	font-size: 58px;
	line-height: 55px;
}
html.msie-8 .we-have-more .title { font-size: 0; }
.we-have-more > div {
	width: 320px;
	white-space: normal;
	display: inline-block;
	vertical-align: top;
	*zoom:1;
	*display: inline;
}
.we-have-more > div .picture {
	margin-bottom: 20px;
}
.we-have-more > div a {
	font-size: 24px;
	line-height: 1.5; 
	text-transform: uppercase;
	cursor: text;
}
.we-have-more > div a:hover {
	text-decoration: none;
}

